--- a/front-cardapio/package.json
+++ b/front-cardapio/package.json
@@ -1,7 +1,7 @@
 {
   "name": "front-cardapio",
   "private": true,
-  "version": "4.0.0",
+  "version": "5.0.0-alpha",
   "type": "module",
   "scripts": { "dev": "vite", "build": "vite build", "preview": "vite preview" },
   "dependencies": { "react": "^19.2.0", "react-dom": "^19.2.0", "react-router-dom": "^6.26.2" },
